tests/NormalTests/paczka1/small_fuzzy/70483534.err
Error in line 1: RhTgBB7Q67 A680 19,3
Error in line 8: q9IrmRFw6 A216 13,0
Error in line 11: S45 A373 10,7
